{
    "name": "Player",
    "maps": [
        {
            "name": "Movement",
            "id": "d5b78884-ad91-4df6-9116-080991b72f3d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9bb4c693-a6c5-4ccb-904d-bbe2be7392f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "460c604a-2b0f-434b-9d26-220512c813e6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fa866c1d-8267-4268-b103-673bdf202274",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c69592e5-27ca-47a3-bc4c-a40ef2142e63",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d7f30d00-c8c9-45bf-a34c-09432b852136",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "005fd393-c203-47be-89ad-64d55dd24a48",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1e8e886a-44d9-439d-8a1e-0e3fae7fd10f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "314f8cfe-432d-4a99-a96f-1f0d064a9147",
            "actions": [
                {
                    "name": "Add Coins",
                    "type": "Button",
                    "id": "e0786e27-2f75-4258-8931-b92c9d9dd36d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spend Coins",
                    "type": "Button",
                    "id": "a5fa619f-9579-42d9-acdc-97b5cad3feea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "76787510-667b-474b-a90a-6da6e8c92eb1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Add Coins",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ce083a8-e4a9-4eb6-a2d7-22ad923762b7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spend Coins",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Battle",
            "id": "6b1c95a5-0483-4700-a132-c4cb97b8da87",
            "actions": [
                {
                    "name": "UseFirstAbility",
                    "type": "Button",
                    "id": "1323ccd9-5fcf-4eca-9ea1-e4d22d1a8f7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSecondAbility",
                    "type": "Button",
                    "id": "8bd13a6c-1871-458a-b2b2-2c82b0294cce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseThirdAbility",
                    "type": "Button",
                    "id": "4041ee2c-f29e-4b78-9de8-b98043cd40b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PhysicalAttack",
                    "type": "Button",
                    "id": "4d51c4f5-904e-490d-a763-af4e9fb2f9e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "72dc645b-3ce0-4b98-813a-9243686cffe2",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseFirstAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58f08db5-1768-4604-a786-c5e79c3394c9",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseFirstAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bfb62d5-a54b-4d58-b690-ac1f24be37dc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSecondAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f590ad97-f1f8-4c7d-af89-a2e9f4f7bad0",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseSecondAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8be3f4ff-ad86-4b13-a8e4-bf3f60ec0d2e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseThirdAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bc32c0d-2ff6-498e-8828-b1b2063b4f8c",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseThirdAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6b7563a-9b7b-4768-a30e-0f4e4e3b2d08",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2a60ce4-c859-4e8f-90a3-836c40fe2fc9",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PhysicalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "System",
            "id": "f44f34a3-d7d9-42fd-a8f7-9387b5e0545b",
            "actions": [
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "dee5e6d3-5122-4a0a-94cd-c0433eb1bb13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "018e0e49-db97-4d04-beef-995ede07a24b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4d9bcf47-bce3-40bb-bc98-57057444e9d5",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32b98af7-619d-4a4a-8833-99bb71b85c12",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}